# babymilu-firmware

./: .gitattributes  .gitignore  ANIMATION_FLOW.md  AUDIO_FLOW_VERIFICATION.md  BMI270_Gesture_Sensor_Integration_Guide.md  CHANGES_SUMMARY.md  CMakeLists.txt  CODEBASE_WALKTHROUGH.md  COMMIT_MANAGED_COMPONENTS.md  DEEP_ANALYSIS_TTS_STOP_ISSUE.md  ECHOEAR_TOUCH_IMPLEMENTATION_GUIDE.md  ECHOEAR_TOUCH_SENSOR_COMPREHENSIVE_DOCUMENTATION.md  EMOTION_MAPPING_GUIDE.md  ERROR_LOG_UPLOAD_ARCHITECTURE.md  FINAL_SOLUTION.md  FIRMWARE_CHANGES_IMPLEMENTATION_PLAN.md  FIX_HASH_MISMATCH.md  GPIO7_TOUCH_SENSOR_ENABLE_GUIDE.md  HOW_TO_DETECT_ACL_DENIAL.md  MIGRATION_13_TO_20_GIFS_GUIDE.md  MQTT_DEBUGGING_GUIDE.md  MQTT_EOF_ERROR_DEBUGGING.md  MQTT_IMPROVEMENTS_IMPLEMENTED.md  OTA_REQUEST_ANALYSIS.md  OVERLAY_ANIMATION_FILES.md  POSTMAN_TESTING_GUIDE.md  RASPBERRY_PI_MIGRATION_PLAN.md  READEME.md  README.md  README_en.md  README_ja.md  README_wifi_disconnection_recovery.md  README_xiaozhi.md  SD_CARD_DEBUGGING.md  SERVER_CHANGES_PROPOSAL.md  STARTUP_GIF_RENDER_FIX.md  STATE_MANAGEMENT_EXPLANATION.md  TOUCH_SENSOR_INTEGRATION_GUIDE.md  TOUCH_SENSOR_MENUCONFIG_GUIDE.md  TOUCH_SENSOR_SENSITIVITY_GUIDE.md  (+41 more)
QMI8658/: I2C_Driver.c  I2C_Driver.h  QMI8658.c  QMI8658.h
SD_Card_Minimal/: CMakeLists.txt  README.md  SD_MMC.c  SD_MMC.h
docs/: AGENT_CONTEXT.md  ANIMATION_UPLOAD_TESTING_GUIDE.md  MQTT_WEBSOCKET_ARCHITECTURE.md  animation-delta-frame-options.md  animation-memory-management-explanation.md  ble-wifi-setup-guide.md  emotion-mappings.md  enhanced-image-converter-guide.md  err-txt-upload-guide.md  file-transfer-testing-guide.md  mcp-usage.md  (+15 more)
main/: CMakeLists.txt  Kconfig.projbuild  afe_audio_processor.cc  afe_audio_processor.h  application.cc  application.h  audio_codec.cc  audio_codec.h  audio_processor.h  background_task.cc  background_task.h  box_audio_codec.cc  box_audio_codec.h  config.h  custom_logging.cc  custom_logging.h  error_log_uploader.cc  error_log_uploader.h  factory_test.cc  factory_test.h  idf_component.yml  main.cc  mcp_server.cc  mmap_generate_spiffs_data.h  ota.cc  ota.h  scripted_playback.cc  scripted_playback.h  sd_card.cc  sd_card.h  sd_card_startup.cc  sd_card_startup.h  settings.cc  system_info.cc  system_info.h  wav_player.cc  wav_player.h
main/animation/: animation.cc  animation.h  animation_demo.c  animation_updater.cc  animation_updater.h  spiffs_example.c  test_integration.c  test_memory_fix.c  test_memory_fix_v2.c  test_spiffs.c
main/animation/img/: Inspiration2.c  Inspiration3.c  Inspiration4.c  embarrass1.c  embarrass2.c  embarrass3.c  fire1.c  fire2.c  fire3.c  fire4.c  happy1.c  happy2.c  happy3.c  happy4.c  image_50x50.c  image_50x50.h  inspiration1.c  normal1.c  normal2.c  normal3.c  normal4.c  question1.c  question2.c  question3.c  question4.c  shy1.c  shy2.c  sleep1.c  sleep2.c  sleep3.c  sleep4.c
main/assets/common/: charge.p3
main/assets/en-US/: language.json
main/assets/ja-JP/: language.json
main/assets/zh-CN/: language.json
main/assets/zh-TW/: language.json
main/audio/: audio_service.cc  audio_service.h
main/audio/processors/: afe_audio_processor.cc
main/audio_codecs/: audio_codec.cc  audio_codec.h  box_audio_codec.cc
main/audio_processing/: afe_audio_processor.cc  afe_audio_processor.h  afe_wake_word.cc  afe_wake_word.h  audio_processor.h  wake_word.h
main/boards/EchoEar/: EchoEar.cc  config.h
main/boards/atommatrix-echo-base/: atommatrix_echo_base.cc
main/boards/atoms3-echo-base/: atoms3_echo_base.cc
main/boards/atoms3r-echo-base/: atoms3r_echo_base.cc
main/boards/common/: ble_server.c  ble_server.h  board.cc  board.h  button.cc  button.h  esp32_music_sdcard.cc  esp32_music_sdcard.h  i2c_device.cc  i2c_device.h  music.h  power_save_timer.cc  power_save_timer.h  wifi_board.cc  wifi_board.h
main/boards/du-chatx/: du-chatx-wifi.cc
main/boards/echoear/: EchoEar.cc  config.h  config.json  echoear.cc  talk_button_sequence.cc  talk_button_sequence.h  touch.h
main/boards/esp32-cgc-144/: esp32_cgc_144_board.cc
main/boards/esp32-s3-touch-amoled-1.8/: esp32-s3-touch-amoled-1.8.cc
main/boards/esp32-s3-touch-lcd-1.85/: config.h  config.json  esp32-s3-touch-lcd-1.85.cc
main/boards/esp32-s3-touch-lcd-1.85c/: config.h  esp32-s3-touch-lcd-1.85c.cc
main/boards/esp32-s3-touch-lcd-3.5/: esp32-s3-touch-lcd-3.5.cc
main/boards/genjutech-s3-1.54tft/: genjutech-s3-1.54tft.cc
main/boards/lichuang-dev/: lichuang_dev_board.cc
main/boards/lilygo-t-cameraplus-s3/: lilygo-t-cameraplus-s3.cc
main/boards/lilygo-t-circle-s3/: lilygo-t-circle-s3.cc
main/boards/lilygo-t-display-s3-pro-mvsrlora/: lilygo-t-display-s3-pro-mvsrlora.cc
main/boards/m5stack-core-s3/: m5stack_core_s3.cc  sdkconfig.cores3
main/boards/m5stack-tab5/: sdkconfig.tab5
main/boards/magiclick-2p5/: magiclick_2p5_board.cc
main/boards/magiclick-c3/: magiclick_c3_board.cc
main/boards/magiclick-c3-v2/: magiclick_c3_v2_board.cc
main/boards/minsi-k08-dual/: minsi_k08_dual.cc
main/boards/sensecap-watcher/: sensecap_audio_codec.cc  sensecap_watcher.cc  sscma_camera.cc
main/boards/sp-esp32-s3-1.28-box/: sp-esp32-s3-1.28-box.cc
main/boards/sp-esp32-s3-1.54-muma/: sp-esp32-s3-1.54-muma.cc
main/boards/waveshare-s3-touch-amoled-1.75/: config.h  esp32-s3-touch-amoled-1.75.cc
main/boards/xingzhi-cube-0.85tft-ml307/: xingzhi-cube-0.85tft-ml307.cc
main/boards/xingzhi-cube-0.85tft-wifi/: xingzhi-cube-0.85tft-wifi.cc
main/boards/xingzhi-cube-0.96oled-ml307/: xingzhi-cube-0.96oled-ml307.cc
main/boards/xingzhi-cube-0.96oled-wifi/: xingzhi-cube-0.96oled-wifi.cc
main/boards/xingzhi-cube-1.54tft-ml307/: xingzhi-cube-1.54tft-ml307.cc
main/boards/xingzhi-cube-1.54tft-wifi/: xingzhi-cube-1.54tft-wifi.cc
main/boards/zhengchen-1.54tft-ml307/: zhengchen-1.54tft-ml307.cc
main/boards/zhengchen-1.54tft-wifi/: zhengchen-1.54tft-wifi.cc
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h  overlay_pixels.h
main/iot/: README.md
main/protocols/: mqtt_protocol.cc  mqtt_protocol.h  protocol.cc  protocol.h  websocket_protocol.cc  websocket_protocol.h
(+129 files in other folders)
